app/assets/stylesheets/scalient/ui/_data_table.scss
/**
 * Copyright 2014-2015 Scalient LLC
 * All rights reserved.
 *
 * Contains styling for a `div`-based (responsive) data table that collapses columns into rows on small enough screen
 * sizes.
 */
@import "bootstrap/variables";

$data-table-bg: $table-bg;
$data-table-bg-accent: $table-bg-accent;
$data-table-border-radius: 0px;
$data-table-border-color: $table-border-color;
$data-table-cell-padding: $table-cell-padding;
$data-table-breakpoint-max: $screen-sm-max;

.data-table {
  display: table;
  width: 100%;
}

.data-header {
  display: table-header-group;

  > .data-cell {
    background: $data-table-bg;
    border-right: 1px solid $data-table-border-color;
    border-top: 1px solid $data-table-border-color;
    border-bottom: 1px solid $data-table-border-color;
    font-weight: bold;

    &:first-child {
      border-top-left-radius: $data-table-border-radius;
      border-left: 1px solid $data-table-border-color;
    }

    &:last-child {
      border-top-right-radius: $data-table-border-radius;
    }
  }
}

.data-footer {
  display: table-footer-group;

  > .data-cell {
    background: $data-table-bg;
    border-right: 1px solid $data-table-border-color;
    border-bottom: 1px solid $data-table-border-color;
    font-weight: bold;

    &:first-child {
      border-bottom-left-radius: $data-table-border-radius;
      border-left: 1px solid $data-table-border-color;
    }

    &:last-child {
      border-bottom-right-radius: $data-table-border-radius;
    }
  }
}

.data-body {
  display: table-row-group;
}

.data-row {
  display: table-row;

  > .data-cell {
    &:first-child {
      border-left: 1px solid $data-table-border-color;
    }
  }
}

.data-cell {
  display: table-cell;
  padding: $data-table-cell-padding;
  border-right: 1px solid $data-table-border-color;
  border-bottom: 1px solid $data-table-border-color;
  word-wrap: break-word;
}

.data-table.data-striped {
  > .data-body {
    > .data-row:nth-child(odd) {
      background-color: $table-bg-accent;
    }
  }
}

@media (max-width: $data-table-breakpoint-max) {
  .data-table,
  .data-header,
  .data-footer,
  .data-body,
  .data-row,
  .data-cell {
    // Display columns row by row.
    display: block;
  }

  .data-header,
  .data-footer {
    // Hide elements that are no longer needed.
    display: none;
  }

  .data-row {
    margin-bottom: 20px;
  }

  .data-cell {
    position: relative;
    padding-left: 50%;
    border-left: 1px solid $data-table-border-color;

    &:before {
      position: absolute;
      left: 10px;
      padding-right: 10px;
      width: 50%;
      font-weight: bold;
      content: attr(data-label);
    }

    &:first-child {
      border-top-left-radius: $data-table-border-radius;
      border-top-right-radius: $data-table-border-radius;
      border-top: 1px solid $data-table-border-color;
    }

    &:last-child {
      border-bottom-left-radius: $data-table-border-radius;
      border-bottom-right-radius: $data-table-border-radius;
    }
  }
}

